Service implementation class